user roles management + fixes about grading students (need to update grade if exists)